--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>My wireframe</title>
+</head>
+<body>
+    <header>
+        <h1>itsuki tatsuya</h1>
+    </header>
+    <section id="main-content">
+        <!-- main content -->
+    </section>
+    <footer>
+        <p>&copy; 2024 itsuki tatsuya</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
