--- a/index.html
+++ b/index.html
@@ -1,21 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>My wireframe</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
+
+    div {
+      text-align: justify;
+      margin: 20px;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    details {
+      margin-top: 20px;
+    }
+
+    summary {
+      font-weight: bold;
+    }
+
+    a {
+      text-decoration: none;
+      color: #0366d6;
+    }
+
+    table {
+      border-spacing: 10px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>itsuki tatsuya</h1>
-    </header>
-    <section id="main-content">
-        <!-- main content -->
-    </section>
-    <footer>
-        <p>&copy; 2024 itsuki tatsuya</p>
-    </footer>
-    <script src="script.js"></script>
+
+<!-- ItsukiTatsuya's GitHub Profile -->
+<div>
+
+  <!-- Profile -->
+  <p><strong><samp>「</samp></strong></p>
+  <p>
+    <samp>
+      <b>
+        こんにちは
+        <br>
+        バーチャルワールド探検家 🌐 | クリエイティブアーティスト 🎨 | テクノロジー＆アート ⚙️ | 他をインスパイア 🌟
+      </b>
+      <br>
+      <img src="https://readme-typing-svg.herokuapp.com?font=Iosevka&size=16&color=6791c9&center=true&width=410&height=45&lines=私はジュニアプログラマーです。" alt="typing animation">
+      <br>
+      <b>
+        ~ いつき たつや ~
+      </b>
+    </samp>
+  </p>
+  <p><strong><samp>」</samp></strong></p>
+
+  <br>
+
+  <details>
+    <summary><samp><b> より詳しい情報 </b></samp></summary>
+
+    <h2></h2><br>
+
+    <!-- Contact Me -->
+    <p>
+      <samp>
+        連絡先は次のとおりです [<a href="mailto:itsuki.tatsuya11@gmail.com">Eメール</a>]
+      </samp>
+    </p>
+
+    <h2></h2><br>
+
+    <!-- Profile Views Badge -->
+    <p>
+      <samp>
+        <a href="#--------">
+          <img src="https://komarev.com/ghpvc/?username=itsukitatsuya11&label=Profile+Views&color=grey" alt="profile views" />
+        </a>
+      </samp>
+    </p>
+
+    <!-- Github Trophy -->
+    <div>
+      <table>
+        <tr>
+          <td><a href="#--------"><img align="center" alt="GitHub Trophy" src="https://github-trophies.vercel.app/?username=itsukitatsuya11&rank=SECRET,SSS,SS,S,AAA,AA,A&row=2&column=3&margin-w=15&margin-h=15&no-frame=true&theme=nord"></a></td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- Github Stats -->
+    <div>
+      <table>
+        <tr>
+          <td><a href="#--------"><img height="137px" align="center" alt="GitHub Stats" src="https://github-readme-stats.vercel.app/api?username=itsukitatsuya11&count_private=true&show_icons=true&include_all_commits=true&line_height=21&hide_border=true&theme=nord"/></a></td>
+          <td><a href="#--------"><img height="137px" align="center" alt="Top Language" src="https://github-readme-stats.vercel.app/api/top-langs/?username=itsukitatsuya11&layout=compact&line_height=21&hide_border=true&theme=nord"/></a></td>
+        </tr>
+      </table>
+    </div>
+
+  </details>
+</div>
+
 </body>
 </html>
